--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tinq-c (1.0.0-1) unstable; urgency=low
+
+  * DDS native security
+ 
+ -- Tom Billiet <mouse256@gmail.com>  Fri, 20 Jun 2014 21:39:57 +0200
+
 tinq-c (0.20.1-1) unstable; urgency=low
 
   * Initial release 
